--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.1.0",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "framer-motion": "^11.0.3",
